# search-rs

./: .rustfmt.toml  Cargo.toml  Makefile  README.md
benches/: search_benchmark.rs
src/: lib.rs  main.rs
