[package]
name = "search-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "search"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.23.0"
criterion = "0.8.0"
rand = "0.9.2"

[dependencies]
clap = { version = "4.5.53", features = ["cargo", "derive"] }

[[bench]]
name = "search_benchmark"
harness = false
